# sentineldf

./: .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES_ROADMAP.md  API_AS_SERVICE_COMPLETE.md  API_DEPLOYMENT_GUIDE.md  API_INTEGRATION_GUIDE.md  API_RESPONSE_V2.md  BACKEND_SETUP.md  BETA_LAUNCH_SUMMARY.md  BULK_FILE_SCANNING_GUIDE.md  CHANGELOG.md  CLERK_INTEGRATION_GUIDE.md  CLI_USAGE.md  CLOUD_ARCHITECTURE.md  COMPREHENSIVE_DETECTION_GUIDE.md  CUSTOMER_FILE_UPLOAD_FLOW.md  DETAILED_REPORTING_GUIDE.md  Dockerfile  ENTERPRISE_ARCHITECTURE_SUMMARY.md  GUI_FEATURE_SUMMARY.md  HOW_PIP_INSTALL_WORKS.md  HOW_TO_GET_API_KEYS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NETLIFY_ENV_CHECKLIST.md  NEXT_STEPS_TO_LAUNCH.md  PHASE_11_12_COMPLETE.md  PHASE_13_COMPLETE.md  PHASE_14_COMPLETE.md  PHASE_15_COMPLETE.md  PHASE_1_DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  PR_PHASE_13.md  QUICK_START_API_SERVICE.md  QUICK_START_ENTERPRISE.md  README.md  REPORTING_FEATURES_SUMMARY.md  RUNNING_FULL_STACK.md  SDK_USAGE_GUIDE.md  (+22 more)
backend/: __init__.py  api_keys_routes.py  api_minimal.py  app.py  app_with_auth.py  auth.py  billing.py  billing_routes.py  cache.py  database.py  logging_config.py  middleware.py
cli/: __init__.py  sdf.py
cloud/: DEPLOYMENT_GUIDE.md  README.md  __init__.py
docs/: CI.md  PILOT-PROPOSAL.md  PRODUCT_LAUNCH_PLAN.md  RELEASE.md  SECURITY-BRIEF.md
examples/: detailed_report_example.py  scan_folder_example.py
frontend/: __init__.py  streamlit_app.py
landing-page/: .env.example  BETA_SIGNUP_SETUP.md  CLERK_INTEGRATION_SUMMARY.md  CLERK_SETUP_GUIDE.md  DEPLOY_NETLIFY.md  GITHUB_SETUP.md  README.md  WEB3FORMS_SETUP.md  middleware.ts  netlify.toml  next.config.js  package.json  tailwind.config.ts  test-form.html
(+137 files in other folders)
